--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
+    "@types/dom-speech-recognition": "^0.0.4",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "react": "^18",
